<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_story"
        android:textSize="25sp"
        android:padding="15dp"
        android:id="@+id/title"/>

    <TextView
        android:text="@string/words_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/words_left"
        android:padding="10dp"
        android:textSize="15sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/user_input"
            android:layout_weight="1"
            android:padding= "10dp"
            android:hint="@string/type_here"
            android:maxLength="20"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit_button"
            android:onClick="submitWord"/>

    </LinearLayout>

    <TextView
        android:text="@string/category_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/type_word"
        android:padding="10dp"
        android:textSize="12sp"
        android:gravity="center"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alpha"
        android:id="@+id/apha"
        android:padding="10dp"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold" />


</LinearLayout>