<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="baas202.baspondman_pset2.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/madlibs"
        android:contentDescription="@string/mad_libs_welcome_image"
        android:id="@+id/welcome_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_discription"
        android:id="@+id/textView"
        android:layout_below="@+id/welcome_image"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:text="@string/Button_get_started"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:padding="20dp"
        android:onClick="getStarted"/>
</RelativeLayout>
